[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oiduna-hotspot"
version = "0.1.0"
description = "Ubuntu Desktop Wi-Fi Hotspot Setup for Oiduna"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Oiduna Hotspot Contributors" }
]
keywords = ["oiduna", "wifi", "hotspot", "network", "ubuntu", "access-point"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

# Optional: pyroute2 for advanced bridge management
advanced = [
    "pyroute2>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/oiduna-hotspot"
Documentation = "https://github.com/yourusername/oiduna-hotspot#readme"
Repository = "https://github.com/yourusername/oiduna-hotspot"
Issues = "https://github.com/yourusername/oiduna-hotspot/issues"

[project.scripts]
oiduna-hotspot-setup = "setup_network:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing"
